--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ paginate: 5
 paginate_files:
  - index.html
 
-permalink: /:year/:month/:title
+permalink: /:year/:month/:day/:title
 
 markdown: rdiscount
 pygments: true
